# NR-deckbuilder

./: .gitignore  Makefile.am  TODO  configure.ac
debian/: README  README.Debian  README.source  changelog  control  copyright  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  nr-deckbuilder.cron.d.ex  nr-deckbuilder.default.ex  nr-deckbuilder.doc-base.EX  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
po/: POTFILES.in  POTFILES.skip  fr.po  nr_deckbuilder.pot
sample/: get.pl  get_nr_full.sh  load-img.pl  sample.html  sample.sql  sample2.html  sample3.html  sample4.html  sample5.html  test.db  test.nrdb
src/: Makefile.am  main.cc  main.h  nr-card.cc  nr-card.h  nr-db.cc  nr-db.h  nr_deckbuilder.ui  nr_sealed.ui  pdf.cc  s-q-l-error.cc  s-q-l-error.h  tournament.cc  tournament.h  uti.h
win32/: NR-deckbuilder.sln  NR-deckbuilder.vcxproj  NR-deckbuilder.vcxproj.filters  ReadMe.txt  install.iss  stdafx.cpp  stdafx.h
